css/style.css
/* ... */
.carousel-indicators.custom li {
  z-index: 2;
  width: 15px;
  height: 15px;
  margin: 1px 6px;
  background-color: #333;
  border: none;
  opacity: .7;
}

.carousel-indicators.custom li:hover { opacity: .9; }

.carousel-indicators.custom .active {
  width: 16px;
  height: 16px;
  margin: 0 6px;
  background-color: #fff;
  border: 5px solid #333;
  opacity: .6;
  transition: all 200ms;
}

.icon-prev.less { left: 30%; }

.icon-next.less { right: 30%; }

.btn.book-now {
  position: absolute;
  top: 46.5%;
  right: 12%;
  z-index: 2;
  color: #fff;
  background-color: rgba(0,0,0,.6);
  transition: color 300ms ease-in, background-color 300ms ease-in;
}

.btn.book-now:focus { outline: none; }

.btn.book-now:hover {
  color: #333;
  background-color: #ccc;
  text-decoration: none;
  outline: none;
}

.radio-bot { margin: 1.4rem 15px; }

.custom-underline {
  line-height: 1.5;
  color: #000;
  background: url(../images/heading-underline.png) no-repeat 50% 100%;
}

.custom-underline.white {
  color: #fff;
  background: url(../images/heading-underline-white.png) no-repeat 50% 100%;
}

.content-text {
  margin: 25px auto;
  font-size: 20px;
  text-align: center;
}

.radicality-bg {
  background: #fff url(../images/white-hatch-bg.png) no-repeat center;
  background-size: cover;
}

.radicality-bg p {
  margin: 15px auto;
  font-size: 20px;
}

.radicality-bg .text-grey {
  font-size: 16px;
  text-decoration: none !important;
  border-bottom: 1px solid #333;
}

.highlights-box .img-responsive { border-radius: 3px; }

.highlights-box.left {
  padding: 15px 0;
  margin-right: 4px;
}

.highlights-box.left .white-triangle {
  position: absolute;
  top: 10px;
  left: 0;
  border-left: 6.5rem solid #fff;
  border-bottom: 11.5rem solid transparent;
}

.highlights-box.right .white-triangle {
  position: absolute;
  right: 0;
  bottom: 0;
  border-right: 6.5rem solid #fff;
  border-top: 11.5rem solid transparent;
}

.highlights-box .carousel-caption {
  bottom: 0;
  padding: 0;
  color: #fff;
}

.highlights-box.left .carousel-caption {
  right: 12px;
  left: 0;
}

.highlights-box.right .carousel-caption {
  right: 0;
  left: 12px;
}

.highlights-box.right .shade-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to top, rgba(0,0,0,.7) 10%, rgba(0,0,0,0) 70%);
}

.white-hatch-bg {
  background: #fff url(../images/white-hatch-bg.png) no-repeat center;
  background-size: cover;
}

.perseverance {
  padding-top: 35px;
  padding-bottom: 35px;
  background-color: #eee;
}

.perseverance img,
.concepts-showdown img {
  margin: 2px;
  cursor: pointer;
  border-radius: 3px;
}

.perseverance .pad-top { padding-top: calc(4% - 1px); }

.perseverance .extra-left { margin-left: 6px; }

.p-bottom7rem { padding-bottom: 7rem; }

.p-bottom20rem { padding-bottom: 20rem; }

.concepts-showdown {
  padding-top: 5rem;
  padding-bottom: 3rem;
}

.pad-left-right { padding: 0 4px; }

.m-top10px { margin-top: 10px; }

.m-top36px { margin-top: 36px; }

.m-top5px { margin-top: 5px !important; }

.m-top9rem { margin-top: 9rem; }

.m-top11rem { margin-top: 5rem; }

.m-top-neg-28rem { margin-top: -28.1rem; }

.h-fit { height: 28.1rem; }

.m-bot6rem { margin-bottom: 6rem; }

.m-left20px { margin-left: 12px; }

.rel-top-neg5rem {
  position: relative;
  top: -5rem;
}

.rel-top5rem {
  position: relative;
  top: 5rem;
}

.custom-margin {
  margin-top: 2rem;
  margin-bottom: 5rem;
}

.m-right10px { margin-right: 10px; }

.pos-top-neg8px {
  position: relative;
  top: -8px;
}

.f-size20px { font-size: 20px; }

.f-size14px { font-size: 14px; }

.vision-strip {
  padding: 10px 15px;
  margin: 10px auto 10px;
  color: #fff;
  background: linear-gradient(right, #8d0000, #e00000);
  background: -webkit-linear-gradient(right, #8d0000, #e00000);
  background: -o-linear-gradient(right, #8d0000, #e00000);
  background: -moz-linear-gradient(right, #8d0000, #e00000);
  border-radius: 2px;
}

.vision-strip p { margin: auto !important; }

.img-absolute-center {
  position: absolute;
  top: -22rem;
  left: calc(50% - 9rem);
}

.profile-pic {
  padding: 10px;
  margin: 15px auto;
  cursor: pointer;
  border: 3px solid #0d47a1;
  border-radius: 100%;
}

.profile-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 17px;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: rgba(255,255,255,.7);
  border-radius: 100%;
  opacity: 0;
  transition: opacity 300ms;
}

.profile-pic.rotate { transform: rotate(40deg); }

.profile-pic:hover + .profile-overlay,
.profile-overlay:hover { opacity: 1; }

.profile-overlay a {
  display: flex;
  align-items: center;
  flex-grow: 1;
  text-decoration: none;
}

.profile-overlay i {
  padding: 10px 12px;
  border: 3px solid #0d47a1;
  border-radius: 100%;
}

.parallax-window {
  min-height: 45rem;
  background: transparent;
}

.parallax-window.less { min-height: 30rem; }

.jumbo { width: 100%; }

.social-icons {
  display: inline-block;
  margin-right: 10px;
  font-size: 24px;
  color: #fff;
  transform: scale(1);
  transition: transform 300ms, color 200ms;
}

.social-icons:first-child { margin-left: 10px; }

.social-icons:focus,
.social-icons:hover {
  color: #999;
  text-decoration: none;
  transform: scale(1.2);
}

.subscribe {
  padding: 6px 25px;
  display: inline-block;
  color: #333;
  background-color: #b8b8b8;
}

.hr-line {
  height: 7px;
  background-color: #000;
}

#bookPopup .modal-content { background-color: rgba(255,255,255,.67); }

#bookPopup .modal-header,
#bookPopup .modal-footer { border: none; }

#bookPopup .close {
  text-shadow: none;
  opacity: 1;
}

.img-overlay {
  position: absolute;
  top: 2px;
  right: -2px;
  bottom: 2px;
  left: 2px;
  display: flex;
  align-items: center;
  color: #fff;
  background-color: rgba(0,0,0,.7);
  border-radius: 3px;
  cursor: pointer;
  opacity: 1;
  transition: opacity 500ms ease;
}
/* ... */

